--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.5",
+        "@hookform/resolvers": "^3.9.1",
         "next": "^15.0.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -20,12 +21,12 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/validator": "^13.11.9",
+        "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "15.0.1",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "@types/validator": "^13.11.9",
-        "autoprefixer": "^10.0.1",
         "typescript": "^5"
     }
 }
